--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,35 @@
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
 *.egg
-
-# Virtual environments
+*.egg-info/
+dist/
+build/
+*.log
 venv/
 env/
-ENV/
-.venv
-
-# Environment variables
 .env
+
+# Node
+node_modules/
+.next/
+out/
+build/
+*.local
+
+# OS
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-
-# Database
-*.db
-*.sqlite3
-
-# Logs
-*.log
 
 # Uploads
-uploads/*
-!uploads/.gitkeep
-
-# OS
-.DS_Store
-Thumbs.db
-
+backend/uploads/*
+!backend/uploads/.gitkeep
