--- a/.gitignore
+++ b/.gitignore
@@ -4,32 +4,102 @@ __pycache__/
 *$py.class
 *.so
 .Python
-*.egg
-*.egg-info/
-dist/
 build/
-*.log
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 venv/
+ENV/
 env/
+.venv
+
+# Environment
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Database
+*.db
+*.sqlite3
+*.sqlite
+
+# Uploads
+acme-service/uploads/*.csv
+acme-service/uploads/*.xlsx
 
 # Node
 node_modules/
-.next/
-out/
-build/
-*.local
+.pnp
+.pnp.js
 
-# OS
+# Testing
+.coverage
+.pytest_cache/
+coverage/
+*.cover
+.hypothesis/
+
+# Next.js
+acme-client/.next/
+acme-client/out/
+acme-client/build/
+acme-client/dist/
+
+# Production
+build
+dist
+
+# Misc
 .DS_Store
-Thumbs.db
+*.pem
+.env*.local
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*.swn
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
 
-# Uploads
-backend/uploads/*
-!backend/uploads/.gitkeep
+# OS
+Thumbs.db
+Desktop.ini
+
+# Logs
+logs
+*.log
+
+# Redis
+dump.rdb
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# Temporary
+*.tmp
+*.temp
